# DevTrack

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 6e1f5e59103b_add_tasks_table.py  8c97d09ecf38_add_task_status.py  8d54e80ca809_create_teams_table.py  bf42373bcd3a_changed_datetime_to_date_in_tasks.py  ccddbde43203_added_team_member_model.py  dad01119d94a_create_users_table.py  e5c0f44d9b91_add_team_id_to_tasks.py  fb1ee122ccbe_add_tasks_table.py
app/: main.py
app/api/v1/: auth.py  health.py  router.py  tasks.py  team.py  team_member.py
app/core/: celery_app.py  config.py  redis_client.py  security.py
app/db/: base.py  dependencies.py  session.py
app/emails/: no_reply_messages.py
app/enums/: team_role.py
app/exceptions/: base.py  handlers.py  task.py  team.py  team_member.py  token.py  user.py
app/models/: task.py  team.py  team_member.py  user.py
app/repositories/: task_repository.py  team_member_repository.py  team_repository.py  user_repository.py
app/schemas/: task.py  team.py  team_member.py  tokens.py  user.py
app/services/: dependencies.py  email_service.py  task_permission_service.py  task_service.py  team_member_service.py  team_permission_service.py  team_service.py  user_service.py
app/tasks/: email.py
tests/: test_email_service.py  test_security.py  test_team_member_service.py  test_user_service.py
